--- a/css/soundless-landing-page.webflow.css
+++ b/css/soundless-landing-page.webflow.css
@@ -665,7 +665,8 @@ p {
 .divider {
   border: none;
   border-top: 3px solid #524b4a;
-  margin: 40px 0;
+  margin: 40px auto;
+  width: 50%;
 }
 
 .bold-text-3 {
