--- a/css/soundless-landing-page.webflow.css
+++ b/css/soundless-landing-page.webflow.css
@@ -657,6 +657,10 @@ p {
   padding: 0;
 }
 
+.bottom-space {
+  margin-bottom: 10px; 
+}
+
 .two-column-bullet li {
   display: inline-block;
   width: 100%;
